--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-/Assets/Sprites
+# 3D models
+/Assets/Fighters_(Pack)
 
+# Fighting animations
+/Assets/FightingAnimsetPro
